Change with fonts
Update-1

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="css/style.css">
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -8,7 +9,7 @@
 <body>
 
 <div id="myDIV" class="header">
-  <h2 style="margin:5px">Ravi's To Do List</h2>
+  <h1 style="margin-bottom:25px">Ravi's To Do List</h1>
   <input type="text" id="myInput" placeholder="Gib Ihm Die Aufgabe...">
   <span onclick="newElement()" class="addBtn">Add</span>
 </div>
